tests/NormalTests/paczka1/fuzzy1/14593957.err
Error in line 13: 1pt9 A507 25,34
Error in line 5: NVpfGmv0X S988 26,2
Error in line 22: NVpfGmv0X A40 53,3
Error in line 35: NVpfGmv0X S912 5,6
